--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script src="https://use.fontawesome.com/6bff936249.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -73,10 +72,26 @@
          <div class="container">
               <div class="row">
                   <div class="col-md-6 col-sm-12 col-xs-12">
-                         <p>EASY HELP</p>
-                         <h1 class="green">Save Koalas From Possible Extinction!</h1>
-                         <p>Loss of koala habitat is the major threat facing koalas today. Since whitsettlement of Australia, roughly 80% of the koala’s habitat has been destroyed and of what remains, most occurs on privately owned land and almost none is protected.</p>
-                         <button class="btn">Read more</button>
+                       <p>EASY HELP</p>
+                       <h1 class="green">Save Koalas From Possible Extinction!</h1>
+                       <p>Loss of koala habitat is the major threat facing koalas today. Since whitsettlement of Australia, roughly 80% of the koala’s habitat has been destroyed and of what remains, most occurs on privately owned land and almost none is protected.</p>
+                       <div class="container">   
+                           <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Read more</button>
+                         <!--modal-->
+                           <div class="modal fade" id="myModal" role="dialog">
+                               <div class="modal-dialog">
+                             <!-- contenido modal-->
+                                  <div class="modal-content">
+                                      <div class="modal-header">
+                                          <h4 class="modal-title">Error 400</h4>
+                                      </div>
+                                      <div class="modal-footer">
+                                          <button type="button" class="btn" data-dismiss="modal">Close</button>
+                                      </div>
+                                  </div>
+                               </div>
+                           </div>
+                       </div>
                   </div>
                   <div class="col-md-6 col-sm-12 col-xs-12">
                          <img src="img/cosita.jpg" alt="koalaCosita" class="img-responsive cosita">
