modal seccion donar btn 1-2

--- a/index.html
+++ b/index.html
@@ -177,7 +177,20 @@
                               <p>1 visits per month</p>
                               <p>PublicAPI access</p>
                           </div>
-                          <button class="btn">DONATE</button>
+                          <button class="btn btn-info" data-toggle="modal" data-target="#myModal2">DONATE</button>
+                           <div class="modal fade" id="myModal2" role="dialog">
+                               <div class="modal-dialog">
+                             <!-- contenido modal-->
+                                  <div class="modal-content">
+                                      <div class="modal-header">
+                                          <h4 class="modal-title">Tu donación se realizó con éxito</h4>
+                                      </div>
+                                      <div class="modal-footer">
+                                          <button type="button" class="btn" data-dismiss="modal">Close</button>
+                                      </div>
+                                  </div>
+                               </div>
+                           </div>
                      </div>
                      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 espacio">
                           <p>GROUPS</p>
@@ -190,7 +203,20 @@
                               <p>2 visits per month</p>
                               <p>PublicAPI access</p>
                           </div>
-                          <button class="btn">DONATE</button>
+                          <button class="btn" data-toggle="modal" data-target="#myModal2">DONATE</button>
+                          <div class="modal fade" id="myModal2" role="dialog">
+                               <div class="modal-dialog">
+                             <!-- contenido modal-->
+                                  <div class="modal-content">
+                                      <div class="modal-header">
+                                          <h4 class="modal-title">Tu donación se realizó con éxito</h4>
+                                      </div>
+                                      <div class="modal-footer">
+                                          <button type="button" class="btn" data-dismiss="modal">Close</button>
+                                      </div>
+                                  </div>
+                               </div>
+                           </div>
                      </div>
                      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 espacio">
                           <p>COMPANIES</p>
