--- a/index.html
+++ b/index.html
@@ -229,7 +229,10 @@
                               <p>3 visits per month</p>
                               <p>PublicAPI access</p>
                           </div>
-                          <button class="btn">DONATE</button>
+                          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#boton3">DONATE</button>
+                          <div id="boton3" class="collapse">
+                             <p>Por el momento no podemos realizar tu solicitud</p>
+                          </div>
                      </div>
                   </div>
             </div>
