--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
    	   	   <div class="container-fluid">
    	   	   	   <div class="navbar-header">
    	   	   	       <a href="#" class="navbar-brand">Save The Koala</a>
-   	   	   	   	   <button  type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+   	   	   	   	   <button  type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuKoala">
    	   	   	   	   	   <span class="sr-only">Toggle navigation</span>
    	   	   	   	   	   <span class="icon-bar"></span>
    	   	   	   	   	   <span class="icon-bar"></span>
    	   	   	   	   	   <span class="icon-bar"></span>	
    	   	   	   	   </button>
    	   	   	   </div>
-   	   	   	   <div class="navbar-collapse collapse">
+   	   	   	   <div class="navbar-collapse collapse" id="menuKoala">
    	   	   	   	   <ul class="nav navbar-nav navbar-right">
    	   	   	   	   	 <li><a href="#foundation">Foundation</a></li>
    	   	   	   	   	 <li><a href="#koalas">Koalas</a></li>
@@ -44,7 +44,7 @@
    	   </div>  
    </section>
 <!-- seccion 2 -->   	
-   <section class="second-section">
+   <section class="second-section" id="foundation">
    	   <div class="container">
    	      <div class="row">
    		       <div class="col-md-6 hidden-sm hidden-xs">
@@ -68,7 +68,7 @@
    	   </div>	   
    </section> 
 <!-- seccion 3 -->  
-   <section class="third-section">
+   <section class="third-section" id="koalas">
          <div class="container">
               <div class="row">
                   <div class="col-md-6 col-sm-12 col-xs-12">
@@ -160,7 +160,7 @@
             </div>
    </section>
 <!--seccion seis -->
-   <section class="six-section">
+   <section class="six-section" id="donate">
             <div class="container">
                   <div class="row text-center">
                      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
